--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     height: 80px;
+    border-radius: 20px;
     padding: 1.25rem;
     gap: 0.5rem;
     border: 2px solid var(--violet-200);
