--- a/src/components/comments.module.css
+++ b/src/components/comments.module.css
@@ -12,6 +12,7 @@
     background-color: var(--gray-400);
     border-radius: 8px;
     padding: 1rem;
+    border: 1px solid var(--violet-200);
     margin-top: 1rem;
     font-size: 12px;
     font-family:"Open Sans", sans-serif ;
@@ -27,6 +28,7 @@
     border-radius: 8px;
     padding: 1rem;
     margin-top: 1rem;
+    border: 1px solid var(--violet-200);
     font-size: 12px;
     font-family: "Open Sans", sans-serif;
 }
@@ -34,6 +36,7 @@
     background-color: var(--gray-400);
     border-radius: 8px;
     padding: 1rem;
+    border: 1px solid var(--violet-200);
     margin-top: 1rem;
     font-size: 12px;
     font-family: "Open Sans", sans-serif;
